--- a/css/layout.css
+++ b/css/layout.css
@@ -32,13 +32,24 @@ footer {
 }
 
 /* Extra maži įrenginiai (telefonai, 600px ir žemiau) */
-@media only screen and (max-width: 600px) {  }
+@media only screen and (max-width: 600px) {
+    body {
+        grid-template-areas: 'h' 'm' 'f';
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+    }
+    aside {
+        display:none;
+    }
+}
 
 /* Maži įrenginiai (statmenos planšetės, ar gulsti telefonai 600px ir aukščiau) */
 @media only screen and (min-width: 600px) {  }
 
 /* Vidutiniai įrenginiai (gulsčios planšetės ar maži laptopai, 768px ir aukščiau) */
-@media only screen and (min-width: 768px) {  }
+@media only screen and (min-width: 768px) {
+
+}
 
 /* Dideli įrenginiai (laptopai, staliniai PC, 992px ir aukščiau) */
 @media only screen and (min-width: 992px) {  }
