--- a/css/dizainas.css
+++ b/css/dizainas.css
@@ -35,3 +35,10 @@ nav > a {
 nav > a:last-of-type {
     border-right: none;
 }
+
+.active {
+    color: aqua;
+    font-size: 32px;
+    padding-right: 8px;
+    margin-left: 8px;
+}
